--- a/project 1/Index.html
+++ b/project 1/Index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>module A </title>
+    <title>module A</title>
 </head>
 
 <body>
-    hello
+    <h1>
+        <project1/index.html</h1>
 </body>
 
 </html>
